# BrainOrganoidTwin

./: .gitignore  CMakeLists.txt  compile_commands.json
include/: SEM.hpp  print.hpp  structs.hpp
src/: Main.cpp  SEM.cpp  print.cpp
test/: test_main.cpp
viz/: vizualise.py
